<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>de.markiewb.netbeans.plugins</groupId>
        <artifactId>paste.to.new.file.modules</artifactId>
        <version>1.2.0-SNAPSHOT</version>
    </parent>

    <groupId>de.markiewb.netbeans.plugins</groupId>
    <artifactId>paste.to.new.file.java</artifactId>
    <packaging>nbm</packaging>

    <name>Paste to new file - Java</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <netbeans.run.params.ide />
        <netbeans.run.params>-J-javaagent:"${current.jrebel.agent.path}" -J-Drebel.log=true ${netbeans.run.params.ide}</netbeans.run.params>
        <netbeans.version>RELEASE74</netbeans.version>
    </properties>
    <organization>
        <name>Benno Markiewicz (benno.markiewicz@googlemail.com)</name>
    </organization>
    <url>https://github.com/markiewb/nb-paste-to-new-file</url>

    <repositories>
        <!--
        Repository hosting NetBeans modules, especially APIs.
        Versions are based on IDE releases, e.g.: RELEASE691
        To create your own repository, use: nbm:populate-repository
        -->
        <repository>
            <id>netbeans</id>
            <name>NetBeans</name>
            <url>http://bits.netbeans.org/maven2/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-api-annotations-common</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-loaders</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-java-source</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util-lookup</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-awt</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-libs-junit4</artifactId>
            <version>${netbeans.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-nodes</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-filesystems</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-libs-javacapi</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-projectapi</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-java-project</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>de-markiewb-netbeans-plugins-pastetonewfile-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>nbm-maven-plugin</artifactId>
                <version>3.11.1</version>
                <extensions>true</extensions>
                <configuration>
                    <!-- keep this id, else the update from existing versions will fail
                         and will cause classpath issues in the log file
                    -->
                    <codeNameBase>de.markiewb.netbeans.plugins.pastetonewfile</codeNameBase>
                    <keystore>private/keystore</keystore>
                    <keystorealias>myself</keystorealias>
                    <licenseFile>LICENSE</licenseFile>
                    <licenseName>Apache 2.0</licenseName>
                </configuration>
            </plugin>

            <plugin>
                <!-- NetBeans 6.9+ requires JDK 6, starting NetBeans 7.4 source 1.7 will be required   -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <compilerArguments>
                        <endorseddirs>${endorsed.dir}</endorseddirs>
                    </compilerArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <argLine>-Djava.endorsed.dirs=${endorsed.dir}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <!-- to have the jar plugin pickup the nbm generated manifest -->
                    <useDefaultManifestFile>true</useDefaultManifestFile>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <description>&lt;h1&gt;Pastes textual clipbord content into a new file.&lt;/h1&gt;

Select a folder-node and choose "Edit->Paste to new file".

&lt;ul&gt;
&lt;li&gt;Support of arbitrary text (user will be asked for filename)&lt;/li&gt;
&lt;li&gt;Support of Java sources (packagename/folders will be adapted to prevent compile errors)&lt;/li&gt;
&lt;ul&gt;
&lt;li&gt;pasting at source root (like src/main/java) will create the file in the package defined by the packagename in the clipboard (=folders will be created to match sourcecode's packagename)&lt;/li&gt;
&lt;li&gt;pasting at non-source root (like src/main/java/com/foo) will create the file in the package defined by the selected folder (=sourcecode's packagename will be modified to match the folder structure)&lt;/li&gt;&lt;/li&gt;
&lt;/ul&gt;
&lt;/ul&gt;

&lt;h2&gt;Updates&lt;/h2&gt;
&lt;h3&gt;1.0.0:&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;Initial version&lt;/li&gt;
&lt;li&gt;Support of Java sources in clipboard&lt;/li&gt;
&lt;li&gt;Support of arbitrary text  in clipboard&lt;/li&gt;
&lt;/ul&gt;
&lt;h2&gt;

&lt;p&gt;Legal disclaimer: Code is licensed under Apache 2.0. &lt;/p&gt;

&lt;p&gt;
Provide defects, request for enhancements and feedback at &lt;a href=https://github.com/markiewb/nb-paste-to-new-file/issues"&gt;https://github.com/markiewb/nb-paste-to-new-file/issues&lt;/a&gt;
&lt;/p&gt;
&lt;p&gt;Compatible to NetBeans 7.4+, JDK7&lt;/p&gt;
&lt;p&gt;
&lt;a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=K4CMP92RZELE2"&gt;&lt;img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" alt="btn_donate_SM.gif"&gt;&lt;/a&gt;

&lt;/p&gt;</description>
    <scm>

        <connection>scm:git:https://github.com/markiewb/nb-paste-to-new-file.git</connection>
    </scm>
</project>
